--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation project(':SlidingMenu')
     implementation 'org.xutils:xutils:3.5.0'
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
 }
