--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation project(':SlidingMenu')
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
-//必须使用
+    //必须使用
     implementation 'com.lzy.net:okgo:3.0.4'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
+    implementation project(':ViewPagerIndicatorLlibrary')
 }
