--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'me.tatarka:gradle-retrolambda:3.7.0'
+        classpath 'com.mob.sdk:MobSDK:2018.0319.1724'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
