--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,17 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            //选择要添加的对应 cpu 类型的 .so 库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+        }
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME: "com.potato.zhbj",
+                JPUSH_APPKEY : "9459020c303cc16510c28977", //JPush 上注册的包名对应的 Appkey.
+                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
+        ]
     }
     buildTypes {
         release {
@@ -20,6 +31,7 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+
 }
 MobSDK {
     appKey "282baca3d7996"
@@ -69,10 +81,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':SlidingMenu')
     implementation 'com.google.code.gson:gson:2.8.0'
-   // implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
+    // implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
     //必须使用
     implementation 'com.lzy.net:okgo:3.0.4'
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.github.bumptech.glide:glide:3.6.1'
     implementation project(':ViewPagerIndicatorLlibrary')
+    //极光推送
+    implementation 'cn.jiguang.sdk:jpush:3.1.6'  // 此处以JPush 3.1.6 版本为例
+    implementation 'cn.jiguang.sdk:jcore:1.2.5'  // 此处以JCore 1.2.5 版本为例。
 }
